--- a/templates/cv.html
+++ b/templates/cv.html
@@ -139,26 +139,23 @@ h2{
   <body>
       <div class="cv-container">
         <div class="left-column">
-          <img class="portait" src="https://www.codeur.com/tuto/wp-content/uploads/2022/01/MG_0110-4-293x300.jpg" />
+          <img class="portait" src="{{ info_user.Photo }}" />
           <div class="section">
             <p>
-              <i class="icon fab fa-linkedin text-darkblue"></i> pierre-gomba
+              <i class="icon fab fa-linkedin text-darkblue"></i> {{info_user.Linkedin}}
             </p>
           </div>
           <div class="section">
             <h2>PROFILE</h2>
             <p>
-              Le <strong>Front-end</strong> est une de mes passions : j’aime intégrer ou imaginer des interfaces modernes, les rendre responsive et les dynamiser avec des animations élégantes. Mes deux technos de coeur sont <strong>Angular</strong> et <strong>Bootstrap</strong>, que j’utilise depuis plus de 6 ans. Je suis aussi Fullstack : PHP, MySQL, Doctrine… 
-            </p>
-            <p>
-              De nature débrouillard et indépendant dans mon travail, j’aime apprendre de nouvelles technologies, passer du temps à résoudre des problèmes et réaliser du code de qualité. Mes valeurs de travail : clean code, flexibilité, performance et sérieux.
+              <strong>{{info_user.Profile}}</strong> 
             </p>
           </div>
           <div class="section">
             <h2>SKILLS</h2>
             <ul class="skills">
-              <li><i class="icon fas fa-check-circle text-darkblue"></i> <strong>Angular &#124; Typescript</strong></li>
-              <li><i class="icon fas fa-check-circle text-darkblue"></i> <strong>Bootstrap</strong></li>
+              <li><i class="icon fas fa-check-circle text-darkblue"></i> <strong>{{info_user.Skills}} &#124; </strong></li>
+              <!-- <li><i class="icon fas fa-check-circle text-darkblue"></i> <strong>Bootstrap</strong></li>
               <li><i class="icon fas fa-check-circle text-darkblue"></i> <strong>HTML5 &#124; CSS3 &#124; SASS</strong></li>
               <li><i class="icon fas fa-check-circle text-darkblue"></i> <strong>Javascript</strong></li>
               <li><i class="icon fas fa-check-circle text-darkblue"></i> <strong>jQuery</strong></li>
@@ -166,52 +163,43 @@ h2{
               <li><i class="icon fas fa-check-circle text-darkblue"></i> PHP</li>
               <li><i class="icon fas fa-check-circle text-darkblue"></i> Zend Framework</li>
               <li><i class="icon fas fa-check-circle text-darkblue"></i> MySQL</li>
-              <li><i class="icon fas fa-check-circle text-darkblue"></i> Git &#124; Github</li>
+              <li><i class="icon fas fa-check-circle text-darkblue"></i> Git &#124; Github</li> -->
             </ul>
           </div>
           <div class="section">
             <h2>Languages</h2>
             <p>
-              Français, langue maternelle
-              <br>
-              Anglais, compétence professionnelle
+              {{info_user.Languages}}
             </p>
           </div>
           <div class="section">
             <h2>Interests</h2>
             <p>
-              Jeux vidéo, jouer et développer
-              <br>
-              Musique, écoute et composition
-              <br>
-              Art en général
-              <br>
-              Sport
-              <br>
-              Informatique en général
+              {{info_user.Interests}}
             </p>
           </div>
         </div>
         <div class="right-column">
           <div class="header">
-            <h1>Pierre <span class="text-blue text-uppercase">Gomba</span></h1>
+            <h1>{{ session["First_name"] }}  <span class="text-blue text-uppercase">{{ session["Last_name"] }}</span></h1>
             <p>Freelance Front-end Developer</p>
             <ul class="infos">
-              <li><i class="icon fas fa-at text-blue"></i> <a href="mailto:contact@pgomba.com">contact@pgomba.com</a></li>
-              <li><i class="icon fas fa-phone text-blue"></i> 04 75 53 80 50</li>
-              <li><i class="icon fas fa-map-marker-alt text-blue"></i> Boulevard de la Constitution 31, 4020 Liège</li>
+              <li><i class="icon fas fa-at text-blue"></i> <a href="mailto:contact@pgomba.com">{{ session["email"] }}</a></li>
+              <li><i class="icon fas fa-phone text-blue"></i>{{info_user.Phone}}</li>
+              <li><i class="icon fas fa-map-marker-alt text-blue"></i> {{info_user.Address}}</li>
             </ul>
           </div>
           <div class="content">
             <div class="section">
               <h2>Professional <br><span class="text-blue">Experiences</span></h2>
               <p>
-                <strong>2015 <i class="fas fa-long-arrow-alt-right"></i> 2021</strong>
+                <!-- <strong>2015 <i class="fas fa-long-arrow-alt-right"></i> 2021</strong>
                 <br>
-                Fullstack Developer à temps plein chez <em>Webadev SPRL</em>
+                Fullstack Developer à temps plein chez <em>Webadev SPRL</em> -->
+                {{info_user.PE}}
               </p>
               <ul class="experience-list">
-                <li>Réalisations de sites web, d’e-shops, d’interfaces et d’applications web sous Angular et Bootstrap</li>
+                <!-- <li>Réalisations de sites web, d’e-shops, d’interfaces et d’applications web sous Angular et Bootstrap</li>
                 <li>Intégration de templates Photoshop, Illustrator, Sketch, Figma</li>
                 <li>Animations CSS / JS</li>
                 <li>Responsive design</li>
@@ -220,10 +208,10 @@ h2{
                 <li>Collaboration avec d’autres studios graphique (Studio Debie, SOL,…)</li>
                 <li>Optimisation des performances</li>
                 <li>Développement de templates et de modules réutilisables</li>
-                <li>Projets en équipe, utilisation quotidienne de SVN, Git et Github</li>
+                <li>Projets en équipe, utilisation quotidienne de SVN, Git et Github</li> -->
               </ul>
             </div>
-            <div class="section">
+            <!-- <div class="section">
               <p>
                 <strong>2021</strong>
                 <br>
@@ -233,43 +221,20 @@ h2{
                 <li>Freelance Front-end Developer</li>
                 <li>Unity Developer / Sound Designer</li>
               </ul>
-            </div>
+            </div> -->
             <div class="section">
               <h2>Education <br><span class="text-blue"></span></h2>
               <p>
-                <strong>2015 <i class="fas fa-long-arrow-alt-right"></i> 2019</strong>
+                <!-- <strong>2015 <i class="fas fa-long-arrow-alt-right"></i> 2019</strong>
                 <br>
-                <em>Bachelier en Informatique de Gestion</em>, Diplômé, Institut Saint Laurent
-              </p>
-              <p>
-                <strong>2015</strong>
-                <br>
-                <em>STE-Formations Informatiques</em>, Formation qualifiante de Web Developer
-              </p>
-              <p>
-                <strong>2013 <i class="fas fa-long-arrow-alt-right"></i> 2014</strong>
-                <br>
-                <em>Bachelier en Sciences humaines</em>, Haute École de Liège
-              </p>
-              <p>
-                <strong>2009 <i class="fas fa-long-arrow-alt-right"></i> 2013</strong>
-                <br>
-                <em>Bachelier en Psychologie</em>, Université de Liège
-              </p>
-              <p>
-                <strong>2002 <i class="fas fa-long-arrow-alt-right"></i> 2009</strong>
-                <br>
-                <em>CESS</em>, Institut Notre-Dame de Jupille
+                <em>Bachelier en Informatique de Gestion</em>, Diplômé, Institut Saint Laurent -->
+                {{info_user.Education}}
               </p>
             </div>
             <div class="section">
-              <h2>Other <br><span class="text-blue">experiences</span></h2>
+              <h2>Organizations <br><span class="text-blue"></span></h2>
               <p>
-                Permis B, possession d’une voiture
-                <br>
-                Animateur Scout pendant 6 ans
-                <br>
-                Brevet d’animateur de Centre de Vacances
+                {{info_user.Organizations}}
               </p>
             </div>
           </div>
