--- a/templates/cv.html
+++ b/templates/cv.html
@@ -1,243 +1,243 @@
 <style>
-    /* GENERAL */
+  /* GENERAL */
 *{
-  margin: 0;
-  box-sizing: border-box;
+margin: 0;
+box-sizing: border-box;
 }
 
 body{
-  font-family: Roboto;
-  font-weight: 300;
-  font-size: .9rem;
-  line-height: 1.5;
+font-family: Roboto;
+font-weight: 300;
+font-size: .9rem;
+line-height: 1.5;
 }
 
 a{
-  text-decoration: none;
-  color: #4472C4;
+text-decoration: none;
+color: #4472C4;
 }
 
 a:hover{
-  text-decoration: underline;
+text-decoration: underline;
 }
 
 p{
-  margin: 0 0 1rem;
+margin: 0 0 1rem;
 }
 
 h1{
-  margin: 0 0 1rem;
-  font-size: 2.5rem;
-  margin-bottom: .5rem;
+margin: 0 0 1rem;
+font-size: 2.5rem;
+margin-bottom: .5rem;
 }
 
 h2{
-  margin: 0 0 1rem;
-  letter-spacing: 1px;
-  text-transform: uppercase;
+margin: 0 0 1rem;
+letter-spacing: 1px;
+text-transform: uppercase;
 }
 
 .text-blue{
-  color: #4472C4;
+color: #4472C4;
 }
 
 .text-darkblue{
-  color: #002060;
+color: #002060;
 }
 
 .text-uppercase{
-  text-transform: uppercase; 
+text-transform: uppercase; 
 }
 
 .icon{
-  margin-right: .5rem;
+margin-right: .5rem;
 }
 
 .cv-container{
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-areas: "left-column right-column right-column";
-  width: 1200px;
-  margin: 100px auto;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+display: grid;
+grid-template-columns: 1fr 1fr 1fr;
+grid-template-areas: "left-column right-column right-column";
+width: 1200px;
+margin: 100px auto;
+box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 .section{
-  margin-bottom: 1.5rem;
+margin-bottom: 1.5rem;
 }
 
 /* LEFT COLUMN */
 .left-column{
-  grid-area: left-column;
-  padding: 50px;
-  background-color: #4472C4;
-  color: white;
+grid-area: left-column;
+padding: 50px;
+background-color: #4472C4;
+color: white;
 }
 
 .portait{
-  border-radius: 50%;
-  max-width: 150px;
-  margin: auto;
-  display: block;
-  margin-bottom: 50px;
+border-radius: 50%;
+max-width: 150px;
+margin: auto;
+display: block;
+margin-bottom: 50px;
 }
 
 .skills{
-  list-style-type: none;
-  padding: 0;
-  font-size: 1.1rem;
-  letter-spacing: 1px;
-  margin: 0 0 1rem;
+list-style-type: none;
+padding: 0;
+font-size: 1.1rem;
+letter-spacing: 1px;
+margin: 0 0 1rem;
 }
 
 /* RIGHT COLUMN */
 .right-column{
-  grid-area: right-column;
-  display: grid;
-  grid-template-rows: 250px 1fr;
-  grid-template-areas: 
-    "header"
-    "content";
+grid-area: right-column;
+display: grid;
+grid-template-rows: 250px 1fr;
+grid-template-areas: 
+  "header"
+  "content";
 }
 
 /* HEADER */
 .header{
-  grid-area: header;
-  padding: 50px;
-  background-color: #F2F2F2;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+grid-area: header;
+padding: 50px;
+background-color: #F2F2F2;
+display: flex;
+flex-direction: column;
+justify-content: center;
 }
 
 .infos{
-  columns: 2;
-  list-style-type: none;
-  padding: 0;
+columns: 2;
+list-style-type: none;
+padding: 0;
 }
 
 /* CONTENT */
 .content{
-  grid-area: content;
-  padding: 50px;
+grid-area: content;
+padding: 50px;
 }
 
 .experience-list{
-  list-style-type: circle;
+list-style-type: circle;
 }
 </style>
 <head>
-    <title>Curriculum vitae</title>
-    <meta charset="utf-8">
-    <meta name="viewport"
-            content="width=device-width, initial-scale=1, user-scalable=no">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-  </head>
-  <body>
-      <div class="cv-container">
-        <div class="left-column">
-          <img class="portait" src="{{ info_user.Photo }}" />
-          <div class="section">
-            <p>
-              <i class="icon fab fa-linkedin text-darkblue"></i> {{info_user.Linkedin}}
-            </p>
-          </div>
-          <div class="section">
-            <h2>PROFILE</h2>
-            <p>
-              <strong>{{info_user.Profile}}</strong> 
-            </p>
-          </div>
-          <div class="section">
-            <h2>SKILLS</h2>
-            <ul class="skills">
-              <li><i class="icon fas fa-check-circle text-darkblue"></i> <strong>{{info_user.Skills}} &#124; </strong></li>
-              <!-- <li><i class="icon fas fa-check-circle text-darkblue"></i> <strong>Bootstrap</strong></li>
-              <li><i class="icon fas fa-check-circle text-darkblue"></i> <strong>HTML5 &#124; CSS3 &#124; SASS</strong></li>
-              <li><i class="icon fas fa-check-circle text-darkblue"></i> <strong>Javascript</strong></li>
-              <li><i class="icon fas fa-check-circle text-darkblue"></i> <strong>jQuery</strong></li>
-              <li><i class="icon fas fa-check-circle text-darkblue"></i> <strong>npm &#124; Webpack</strong></li>
-              <li><i class="icon fas fa-check-circle text-darkblue"></i> PHP</li>
-              <li><i class="icon fas fa-check-circle text-darkblue"></i> Zend Framework</li>
-              <li><i class="icon fas fa-check-circle text-darkblue"></i> MySQL</li>
-              <li><i class="icon fas fa-check-circle text-darkblue"></i> Git &#124; Github</li> -->
-            </ul>
-          </div>
-          <div class="section">
-            <h2>Languages</h2>
-            <p>
-              {{info_user.Languages}}
-            </p>
-          </div>
-          <div class="section">
-            <h2>Interests</h2>
-            <p>
-              {{info_user.Interests}}
-            </p>
-          </div>
+  <title>Curriculum vitae</title>
+  <meta charset="utf-8">
+  <meta name="viewport"
+          content="width=device-width, initial-scale=1, user-scalable=no">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+</head>
+<body>
+    <div class="cv-container">
+      <div class="left-column">
+        <img class="portait" src="{{ info_user.Photo }}" />
+        <div class="section">
+          <p>
+            <i class="icon fab fa-linkedin text-darkblue"></i> {{info_user.Linkedin}}
+          </p>
         </div>
-        <div class="right-column">
-          <div class="header">
-            <h1>{{ session["First_name"] }}  <span class="text-blue text-uppercase">{{ session["Last_name"] }}</span></h1>
-            <p>Freelance Front-end Developer</p>
-            <ul class="infos">
-              <li><i class="icon fas fa-at text-blue"></i> <a href="mailto:contact@pgomba.com">{{ session["email"] }}</a></li>
-              <li><i class="icon fas fa-phone text-blue"></i>{{info_user.Phone}}</li>
-              <li><i class="icon fas fa-map-marker-alt text-blue"></i> {{info_user.Address}}</li>
+        <div class="section">
+          <h2>PROFILE</h2>
+          <p>
+            <strong>{{info_user.Profile}}</strong> 
+          </p>
+        </div>
+        <div class="section">
+          <h2>SKILLS</h2>
+          <ul class="skills">
+            <li><i class="icon fas fa-check-circle text-darkblue"></i> <strong>{{info_user.Skills}} &#124; </strong></li>
+            <!-- <li><i class="icon fas fa-check-circle text-darkblue"></i> <strong>Bootstrap</strong></li>
+            <li><i class="icon fas fa-check-circle text-darkblue"></i> <strong>HTML5 &#124; CSS3 &#124; SASS</strong></li>
+            <li><i class="icon fas fa-check-circle text-darkblue"></i> <strong>Javascript</strong></li>
+            <li><i class="icon fas fa-check-circle text-darkblue"></i> <strong>jQuery</strong></li>
+            <li><i class="icon fas fa-check-circle text-darkblue"></i> <strong>npm &#124; Webpack</strong></li>
+            <li><i class="icon fas fa-check-circle text-darkblue"></i> PHP</li>
+            <li><i class="icon fas fa-check-circle text-darkblue"></i> Zend Framework</li>
+            <li><i class="icon fas fa-check-circle text-darkblue"></i> MySQL</li>
+            <li><i class="icon fas fa-check-circle text-darkblue"></i> Git &#124; Github</li> -->
+          </ul>
+        </div>
+        <div class="section">
+          <h2>Languages</h2>
+          <p>
+            {{info_user.Languages}}
+          </p>
+        </div>
+        <div class="section">
+          <h2>Interests</h2>
+          <p>
+            {{info_user.Interests}}
+          </p>
+        </div>
+      </div>
+      <div class="right-column">
+        <div class="header">
+          <h1>{{ session["First_name"] }}  <span class="text-blue text-uppercase">{{ session["Last_name"] }}</span></h1>
+          <p>{{info_user.Title}}</p>
+          <ul class="infos">
+            <li><i class="icon fas fa-at text-blue"></i> <a href="mailto:contact@pgomba.com">{{ session["email"] }}</a></li>
+            <li><i class="icon fas fa-phone text-blue"></i>{{info_user.Phone}}</li>
+            <li><i class="icon fas fa-map-marker-alt text-blue"></i> {{info_user.Address}}</li>
+          </ul>
+        </div>
+        <div class="content">
+          <div class="section">
+            <h2>Professional <br><span class="text-blue">Experiences</span></h2>
+            <p>
+              <!-- <strong>2015 <i class="fas fa-long-arrow-alt-right"></i> 2021</strong>
+              <br>
+              Fullstack Developer à temps plein chez <em>Webadev SPRL</em> -->
+              {{info_user.PE}}
+            </p>
+            <ul class="experience-list">
+              <!-- <li>Réalisations de sites web, d’e-shops, d’interfaces et d’applications web sous Angular et Bootstrap</li>
+              <li>Intégration de templates Photoshop, Illustrator, Sketch, Figma</li>
+              <li>Animations CSS / JS</li>
+              <li>Responsive design</li>
+              <li>UI / UX Design</li>
+              <li>Projets sous npm et Webpack</li>
+              <li>Collaboration avec d’autres studios graphique (Studio Debie, SOL,…)</li>
+              <li>Optimisation des performances</li>
+              <li>Développement de templates et de modules réutilisables</li>
+              <li>Projets en équipe, utilisation quotidienne de SVN, Git et Github</li> -->
             </ul>
           </div>
-          <div class="content">
-            <div class="section">
-              <h2>Professional <br><span class="text-blue">Experiences</span></h2>
-              <p>
-                <!-- <strong>2015 <i class="fas fa-long-arrow-alt-right"></i> 2021</strong>
-                <br>
-                Fullstack Developer à temps plein chez <em>Webadev SPRL</em> -->
-                {{info_user.PE}}
-              </p>
-              <ul class="experience-list">
-                <!-- <li>Réalisations de sites web, d’e-shops, d’interfaces et d’applications web sous Angular et Bootstrap</li>
-                <li>Intégration de templates Photoshop, Illustrator, Sketch, Figma</li>
-                <li>Animations CSS / JS</li>
-                <li>Responsive design</li>
-                <li>UI / UX Design</li>
-                <li>Projets sous npm et Webpack</li>
-                <li>Collaboration avec d’autres studios graphique (Studio Debie, SOL,…)</li>
-                <li>Optimisation des performances</li>
-                <li>Développement de templates et de modules réutilisables</li>
-                <li>Projets en équipe, utilisation quotidienne de SVN, Git et Github</li> -->
-              </ul>
-            </div>
-            <!-- <div class="section">
-              <p>
-                <strong>2021</strong>
-                <br>
-                Freelance en activité
-              </p>
-              <ul class="experience-list">
-                <li>Freelance Front-end Developer</li>
-                <li>Unity Developer / Sound Designer</li>
-              </ul>
-            </div> -->
-            <div class="section">
-              <h2>Education <br><span class="text-blue"></span></h2>
-              <p>
-                <!-- <strong>2015 <i class="fas fa-long-arrow-alt-right"></i> 2019</strong>
-                <br>
-                <em>Bachelier en Informatique de Gestion</em>, Diplômé, Institut Saint Laurent -->
-                {{info_user.Education}}
-              </p>
-            </div>
-            <div class="section">
-              <h2>Organizations <br><span class="text-blue"></span></h2>
-              <p>
-                {{info_user.Organizations}}
-              </p>
-            </div>
+          <!-- <div class="section">
+            <p>
+              <strong>2021</strong>
+              <br>
+              Freelance en activité
+            </p>
+            <ul class="experience-list">
+              <li>Freelance Front-end Developer</li>
+              <li>Unity Developer / Sound Designer</li>
+            </ul>
+          </div> -->
+          <div class="section">
+            <h2>Education <br><span class="text-blue"></span></h2>
+            <p>
+              <!-- <strong>2015 <i class="fas fa-long-arrow-alt-right"></i> 2019</strong>
+              <br>
+              <em>Bachelier en Informatique de Gestion</em>, Diplômé, Institut Saint Laurent -->
+              {{info_user.Education}}
+            </p>
+          </div>
+          <div class="section">
+            <h2>Organizations <br><span class="text-blue"></span></h2>
+            <p>
+              {{info_user.Organizations}}
+            </p>
           </div>
         </div>
       </div>
-  </body>
+    </div>
+</body>
