--- a/templates/editprofile.html
+++ b/templates/editprofile.html
@@ -45,7 +45,7 @@
          <!-- Sidebar Start -->
          <div class="sidebar pe-4 pb-3">
             <nav class="navbar bg-secondary navbar-dark">
-                <a href="index_back.html" class="navbar-brand mx-4 mb-3">
+                <a href="{{ url_for('back') }}" class="navbar-brand mx-4 mb-3">
                     <h3 class="text-primary"><i class="fa fa-user-edit me-2"></i>DarkPan</h3>
                 </a>
                 <div class="d-flex align-items-center ms-4 mb-4">
@@ -59,16 +59,14 @@
                     </div>
                 </div>
                 <div class="navbar-nav w-100">
-                    <a href="index_back.html" class="nav-item nav-link active"><i class="fa fa-tachometer-alt me-2"></i>Profile</a>
-                    
-                
-                    <a href="{{ url_for('form') }}" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Edit profile</a>
+                    <a href="{{ url_for('back') }}" class="nav-item nav-link "><i class="fa fa-tachometer-alt me-2"></i>Profile</a>
+                    <a href="{{ url_for('editprofile') }}" class="nav-item nav-link active"><i class="fa fa-keyboard me-2"></i>Edit profile</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="far fa-file-alt me-2"></i>features</a>
                         <div class="dropdown-menu bg-transparent border-0">
-                            <a href="signin.html" class="dropdown-item">CV Builder</a>
-                            <a href="signup.html" class="dropdown-item">CV Evaluator</a>
-
+                            <a href="{{ url_for('cv_generator') }}" class="dropdown-item" target="_blank">Build your CV</a>
+                            <a href="#" class="dropdown-item">Enhance your CV</a>
+                            <a href="{{ url_for('index') }}" class="dropdown-item">Interview Prep</a>
                         </div>
                     </div>
                 </div>
@@ -81,7 +79,7 @@
         <div class="content">
             <!-- Navbar Start -->
             <nav class="navbar navbar-expand bg-secondary navbar-dark sticky-top px-4 py-0">
-                <a href="index.html" class="navbar-brand d-flex d-lg-none me-4">
+                <a href="{{ url_for('back') }}" class="navbar-brand d-flex d-lg-none me-4">
                     <h2 class="text-primary mb-0"><i class="fa fa-user-edit"></i></h2>
                 </a>
                 <a href="#" class="sidebar-toggler flex-shrink-0">
