--- a/templates/index_back.html
+++ b/templates/index_back.html
@@ -68,7 +68,7 @@
                             <a href="{{ url_for('doc') }}" class="dropdown-item">Enhance your CV</a>
                             <a href="{{ url_for('chat') }}" class="dropdown-item">Chat With Me</a>
                             <a href="{{ url_for('index') }}" class="dropdown-item">Interview Prep</a>
-                            <a href="http://192.168.31.98:8501" class="dropdown-item">Dashboard Trulens</a>
+                            <!-- <a href="http://192.168.31.98:8501" class="dropdown-item">Dashboard Trulens</a> -->
                         </div>
                     </div>
                 </div>
