TruLens functionalities + UI

--- a/templates/chat2.html
+++ b/templates/chat2.html
@@ -9,7 +9,8 @@
     <style>
       body {
         font-family: Arial, sans-serif;
-        background-color: #f4f4f4;
+        color: #ccc;
+        background-color: #080c2c !important;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -18,7 +19,7 @@
       }
 
       .chat-container {
-        background-color: #ffffff;
+        background-color: #090f3b !important;
         border-radius: 5px;
         padding: 20px;
         width: 80%;
@@ -38,6 +39,7 @@
       }
 
       #user-input {
+        background-color: #ededed;
         flex-grow: 1;
         border: 1px solid #ccc;
         border-radius: 5px;
@@ -45,7 +47,7 @@
       }
 
       #submitBtn {
-        background-color: #4caf50;
+        background-color: #004cd2;
         color: white;
         border: none;
         border-radius: 5px;
@@ -55,14 +57,14 @@
       }
 
       #submitBtn:hover {
-        background-color: #45a049;
+        background-color: #0c56d7;
       }
 
       #result {
         border: 1px solid #ccc;
         border-radius: 5px;
         padding: 20px;
-        background-color: #f8f8f8;
+        background-color: #ededed;
         min-height: 100px;
         overflow-wrap: break-word;
       }
