Job description + TruLens

--- a/templates/button.html
+++ b/templates/button.html
@@ -187,15 +187,12 @@
                         <div class="bg-secondary rounded h-100 p-4">
                             <h6 class="mb-4">Basic Buttons</h6>
                             <div class="m-n2">
-                                <button type="button" class="btn btn-primary m-2">Primary</button>
-                                <button type="button" class="btn btn-secondary m-2">Secondary</button>
-                                <button type="button" class="btn btn-success m-2">Success</button>
-                                <button type="button" class="btn btn-danger m-2">Danger</button>
-                                <button type="button" class="btn btn-warning m-2">Warning</button>
-                                <button type="button" class="btn btn-info m-2">Info</button>
-                                <button type="button" class="btn btn-light m-2">Light</button>
-                                <button type="button" class="btn btn-dark m-2">Dark</button>
-                                <button type="button" class="btn btn-link m-2">Link</button>
+                                <form action="/specific_cv" method="post">
+                                    <p>Heeeeeerrreeeee</p>
+                                    <input type="text"value="test"hidden id="test" name="test">
+                                    <button type="submit" class="btn btn-primary m-2">Primary</button>
+                                </form>
+                                
                             </div>
                         </div>
                     </div>
