--- a/templates/cv.html
+++ b/templates/cv.html
@@ -196,7 +196,7 @@ list-style-type: circle;
               <!-- <strong>2015 <i class="fas fa-long-arrow-alt-right"></i> 2021</strong>
               <br>
               Fullstack Developer à temps plein chez <em>Webadev SPRL</em> -->
-              {{info_user.PE}}
+              {{message_gpt}}
             </p>
             <ul class="experience-list">
               <!-- <li>Réalisations de sites web, d’e-shops, d’interfaces et d’applications web sous Angular et Bootstrap</li>
